ROOMS-120: Fix float spacing on customer field in booking edit form.

--- a/modules/rooms_booking/css/rooms_booking.css
+++ b/modules/rooms_booking/css/rooms_booking.css
@@ -19,8 +19,8 @@
 }
 .rooms-booking-form #edit-customer-wrapper .form-item-client .form-text,
 .rooms-booking-form #edit-customer-wrapper .form-item-client .field-suffix {
-  width: 48%;
-  margin-right: 2%;
+  width: 45%;
+  margin-right: 4%;
   display: inline-block;
 }
 
